[tool.poetry]
name = "labq"
version = "0.1.0"
description = ""
authors = ["gyuchan <schk9611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-dotenv = "^1.4.2"
mysqlclient = "^2.1.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylink = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
